--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+spring.datasource.driver-class-name = org.postgresql.Driver
 
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+server.port = 8443
+
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=jebaited
+server.ssl.key-store-alias=tomcat
+
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl = true
+spring.jpa.hibernate.ddl-auto = update
+
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.hbm2ddl.auto=create
+hibernate.show_sql=false
+hibernate.format_sql=false
+
+hibernate.enable_lazy_load_no_trans=false
+
+hibernate.jdbc.lob.non_contextual_creation=true
+hibernate.connection.useUnicode=true
+hibernate.connection.characterEncoding=UTF8MB4
