--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.generate-ddl = true
 spring.jpa.hibernate.ddl-auto = update
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
 hibernate.show_sql=false
 hibernate.format_sql=false
 
