Added Storade Service (01.02.2022)

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ repositories {
 	mavenCentral()
 }
 
+test {
+	useJUnitPlatform()
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.5.4'
